    * [SYNCOPE-205] - Upgrade to latest Apache Wicket 6.X.Y
    * [SYNCOPE-265] - Ensure that Syncope test data is consistent
    * [SYNCOPE-276] - Upgrade instructions from 1.0.X to 1.1.0
    * [SYNCOPE-278] - Verify export / import
    * [SYNCOPE-326] - Check console style (CSS) on Internet Explorer
    * [SYNCOPE-350] - Provide Getting started / Standalone distribution

Release Notes - Syncope - Version 1.0.7
================================================================================
** Bug
    * [SYNCOPE-332] - User List sorting via Derived attributes column doesn't work
    * [SYNCOPE-336] - Use a auto-complete textfield to chose for external attribute to be mapped during schema mapping creation
    * [SYNCOPE-339] - enum schema multivalue doesn't work
    * [SYNCOPE-341] - When deleting user schema, user list attributes head don't get updated
    * [SYNCOPE-342] - Console might fail to connect when core is deployed on virtual host

** Task
    * [SYNCOPE-326] - Check console style (CSS) on Internet Explorer

Release Notes - Syncope - Version 1.0.6
================================================================================
** Bug
    * [SYNCOPE-294] - User data not refreshed before edit
    * [SYNCOPE-301] - Status is not updated when synchronizing existing users
    * [SYNCOPE-307] - Virtual Attributes don't propagated in case of update during synchronization
    * [SYNCOPE-308] - When trying to update an user in status 'rejected', an error 500 is returned
    * [SYNCOPE-309] - Enter key not bound to user form submit
    * [SYNCOPE-310] - Palette elements get translated
    * [SYNCOPE-314] - User list sort based on username fails 
    * [SYNCOPE-315] - "Persistent" feedback messages
    * [SYNCOPE-316] - Exception when creating connector instances with no bundles available
    * [SYNCOPE-325] - Stacktrace when accessing the Configuration page on JBoss

** Improvement
    * [SYNCOPE-154] - Virtual attribute cache